# tcllunasvg

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MIGRATION-FROM-LUNASVG-IN-TCLMCAIRO.md  Makefile  Makefile.in  README.md  THIRD-PARTY-LICENSES.md  aclocal.m4  config.status  configure  configure.ac  configure.in  pkgIndex.tcl  pkgIndex.tcl.in
.github/workflows/: build.yml
demos/: demo-svg-argb32-tclmcairo.tcl  demo-svg-png.tcl
src/: INSTALL.md  tcllunasvg.cpp
tclconfig/: tea-cxx.m4
tests/: all.tcl  test-tcllunasvg.test
win/: makefile.vc  rules.vc
